[metadata]
name = djdantic
version = 0.0.25b5
author = Manuel Stingl
author_email = opensource@voltane.eu
description = Utilities to use pydantic with the django orm
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU LGPLv2.1
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)
    Operating System :: OS Independent
    Framework :: Django
    Framework :: FastAPI
    Topic :: Utilities
    # Development Status :: 5 - Production/Stable
url = https://github.com/Voltane-EU/djdantic

[options]
zip_safe = false
python_requires = >=3.6
packages = find:
include_package_data = true
install_requires =
    django >= 3.0
    pydantic >= 1.8
    python-jose[cryptography]
    sentry-tools >= 0.0.2
    async-sync-tools >= 0.0.3
